--- a/client/index.html
+++ b/client/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="icon" type="imagem/png" href="./images/icon.png" />
+    <link rel="icon" type="imagem/png" href="./images/aviao.png" />
     <link rel="stylesheet" href="style.css" />
-    <title>Buttickets</title>
+    <title>Pacotes de Viagens</title>
   </head>
   <body>
     <nav id="header" class="navbar navbar-dark bg-dark backgound-header">
       <div class="container-fluid">
-        <a class="navbar-brand">Wallet</a>
+        <a class="navbar-brand">Carteira</a>
         <div id="account" class="d-flex color-wallet"></div>
       </div>
     </nav>
     <nav id="header">
-      <a class="navbar-brand center">Ingressos raros para um colecionador raro!</a>
+      <a class="navbar-brand center">Pacote de Viagens - Adquira já a sua!</a>
 
       <div id="Notickets"></div>
     </nav>
+    
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -28,6 +29,9 @@
         <div id="Buttickets"></div>
       </div>
     </div>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+      Adicione um Pacote
+    </button>
     <script type="module" src="index.js"></script>
   </body>
 </html>
